--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                     <button class="cta-button">Explore More</button>
                 </div>
                 <div class="hero-image">
-                    <img src="https://via.placeholder.com/600x400" alt="Main banner" class="slide-in">
+                    <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Web development on laptop" class="slide-in">
                 </div>
             </div>
 
@@ -860,19 +860,19 @@
                 <h2 class="section-title">What People Say</h2>
                 <div class="testimonial-slider">
                     <div class="testimonial active">
-                        <img src="https://via.placeholder.com/100" alt="Client 1">
+                        <img src="https://images.unsplash.com/photo-1567443024551-f3e3a7b9d41e?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80" alt="Tech company logo">
                         <p>"Excellent service and attention to detail!"</p>
-                        <h4>- Sarah Johnson</h4>
+                        <h4>- Tech Solutions Inc.</h4>
                     </div>
                     <div class="testimonial">
-                        <img src="https://via.placeholder.com/100" alt="Client 2">
+                        <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80" alt="Digital agency logo">
                         <p>"Professional team with creative solutions."</p>
-                        <h4>- Michael Brown</h4>
+                        <h4>- Digital Innovations</h4>
                     </div>
                     <div class="testimonial">
-                        <img src="https://via.placeholder.com/100" alt="Client 3">
+                        <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80" alt="Web dev company logo">
                         <p>"Exceeded all our expectations."</p>
-                        <h4>- Emma Davis</h4>
+                        <h4>- WebCraft Studios</h4>
                     </div>
                     <div class="slider-controls">
                         <button class="prev"><i class="fas fa-chevron-left"></i></button>
@@ -891,7 +891,7 @@
 
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/500x400" alt="About us" class="float-animation">
+                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Tech office workspace" class="float-animation">
                 </div>
                 <div class="about-text">
                     <h2>Our Story</h2>
@@ -915,7 +915,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="https://via.placeholder.com/200" alt="Team Member 1">
+                            <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=80" alt="Programming code">
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -926,7 +926,7 @@
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="https://via.placeholder.com/200" alt="Team Member 2">
+                            <img src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=80" alt="Web design">
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -937,7 +937,7 @@
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="https://via.placeholder.com/200" alt="Team Member 3">
+                            <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=80" alt="Server room">
                             <div class="social-links">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
